actualización del blog

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                             <p>4</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
             <div class="anuncio">
@@ -95,7 +95,7 @@
                             <p>5</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
             <div class="anuncio">
@@ -118,7 +118,7 @@
                             <p>4</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
                         <img src="img/blog1.jpg" alt="Entrada de Blog">
                     </div> 
                     <div class="texto-entrada">
-                        <a href="#">
+                        <a href="entrada.html">
                             <h4>Terraza en el Techo de tu Casa</h4>
                         </a>
                         <p>Escrito el <span>19/05/2021</span> por : <span>VBurman</span></p>
@@ -156,7 +156,7 @@
                         <img src="img/blog2.jpg" alt="Entrada de Blog 2">
                     </div>
                     <div class="texto-entrada">
-                        <a href="#">
+                        <a href="entrada.html">
                             <h4>Guía para la Decoración de tu Hogar</h4>
                         </a>
                         <p>Escrito el <span>19/05/2021</span> por : <span>VBurman</span></p>
