--- a/blog.html
+++ b/blog.html
@@ -4,12 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anuncio</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Blog</h1>
-    <a href="index.html">Volver</a>
+    <header class="site-header">
+        <div class="contenedor contenido-heather">
+            <div class="barra">
+                <a href="/">
+                    <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
+                </a>
+                <nav class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="anuncios.html">Anuncios</a>
+                    <a href="blog.html">Blog</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div> <!-- barra-->
+           </div> <!-- contenedor -->
+    </header>
     
+    
+    <main class="contenedor seccion contenido-centrado">
+        <h1 class="fw300 centrar-texto">Nuestro Blog</h1>
+        <article class="entrada-blog">
+            <div class="imagen">
+                 <img src="img/blog1.jpg" alt="Entrada de Blog">
+             </div> 
+             <div class="texto-entrada">
+                 <a href="entrada.html">
+                     <h4>Terraza en el Techo de tu Casa</h4>
+                 </a>
+                 <p>Escrito el <span>19/05/2021</span> por : <span>VBurman</span></p>
+                 <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero.</p>
+             </div>
+         </article>
+         <article class="entrada-blog">
+             <div class="imagen">
+                 <img src="img/blog2.jpg" alt="Entrada de Blog 2">
+             </div>
+             <div class="texto-entrada">
+                 <a href="entrada.html">
+                     <h4>Contruye una alberca en tu Hogar</h4>
+                 </a>
+                 <p>Escrito el <span>19/05/2021</span> por : <span>VBurman</span></p>
+                 <p>Magnifica el espacio en tu Hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio.</p>
+             </div>
+         </article>
+         <article class="entrada-blog">
+            <div class="imagen">
+                <img src="img/blog3.jpg" alt="Entrada de Blog 3">
+            </div>
+            <div class="texto-entrada">
+                <a href="entrada.html">
+                    <h4>5 Cosas que tenés que saber sobre DecoHome</h4>
+                </a>
+                <p>Escrito el <span>19/05/2021</span> por : <span>VBurman</span></p>
+                <p>Magnifica el espacio en tu Hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio.</p>
+            </div>
+        </article>
+        <article class="entrada-blog">
+            <div class="imagen">
+                <img src="img/blog4.jpg" alt="Entrada de Blog 4">
+            </div>
+            <div class="texto-entrada">
+                <a href="entrada.html">
+                    <h4>Espacios Cálidos en tu Habitación</h4>
+                </a>
+                <p>Escrito el <span>19/05/2021</span> por : <span>VBurman</span></p>
+                <p>Magnifica el espacio en tu Hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio.</p>
+            </div>
+        </article>
+
+    </main>
+
+<footer class="site-footer seccion">
+    <div class="contenedor contenedor-footer">
+        <nav class="navegacion">
+            <a href="nosotros.html">Nosotros</a>
+            <a href="anuncios.html">Anuncios</a>
+            <a href="blog.html">Blog</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
+
+        <p class="copyright">Todos los Derechos Reservados 2021 &copy; </p>
+    </div>
+</footer>
 </body>
 </html>
